--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Findie</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="height:100%">
+    <div style="height:100%" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
