--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html style="height:100%; background-color: rgb(243, 243, 243)" lang="en">
+<html style="height:100%; width: 100%; ;background-color: rgb(243, 243, 243)" lang="en">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Findie</title>
   </head>
-  <body style="height:100%">
-    <div style="height:100%" id="root"></div>
+  <body style="height:100%; width: 100%">
+    <div style="height:100%; width: 100%" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
