--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html style="height:100%; width: 100%; ;background-color: rgb(243, 243, 243)" lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local Findie</title>
